resources/assets/carhouse/css/style.css
/* ... */
.pagination > li > a, .pagination > li > span {
    border-radius: 0% !important;
    margin: 0 5px 5px;
    width: 36px;
    height: 36px;
    text-align: center;
    padding: 0px;
    line-height: 34px;
}

.pagination > li > a, .pagination > li > span :hover {
    color: #6a0000;
}

.pagination > .active > a,
.pagination > .active > a:focus,
.pagination > .active > a:hover,
.pagination > .active > span,
.pagination > .active > span:focus,
.pagination > .active > span:hover {
    z-index: 3;
    color: white;
    cursor: default;
    background-color: #6a0000;
    border-color: #6a0000;
}

.pagination > .disabled > a,
.pagination > .disabled > a:focus,
.pagination > .disabled > a:hover,
.pagination > .disabled > span,
.pagination > .disabled > span:focus,
.pagination > .disabled > span:hover {
    color: #6a0000;
    cursor: not-allowed;
    background-color: #fff;
    border-color: #ddd;
}

.pagination > li > a:hover,
.pagination > li > span:focus,
.pagination > li > span:hover {
    background-color: #6a0000;
    color: white;
    border: 0;
}

#table-body>.second-row {
    background: #f7f7f7;
}






/** SIDEBAR **/

.sidebar {
    transform: translate(0, 0); /* For browsers don't support translate3d. */
    transform: translate3d(0, 0, 0);
    will-change: position, transform;
}

.inner-wrapper-sticky{
    z-index: 10;
}


.sidebar .search-btn{
    width: 100%;
    margin-bottom: 20px;
    font-size: 11px;
    font-weight: 700;
    text-transform: uppercase;
    display: block;
    text-align: center;
    letter-spacing: 1px;
    color: #ffffff;
    padding: 7px 13px;
    background-color: #6a0000;
    text-decoration: none;
    transition: background-color 0.3s;
    border-radius: 4px;
}

.sidebar .search-btn:hover {
    background-color: #890000;
}

.sidebar .search-btn_half{
    width: 48%;
}

#favorite-search-btn{
    float: left;
}

#favorite-clear-btn{
    float: right;
}

.for-side-bar-fixed{
    content:"";
}

/** GLOBAL-SEARCH **/

.global-search {
    width: 100%;
    margin-bottom: 5px;
}

.global-search .popup{
    display: none;
    position: absolute;
    top: 0;
    right: -209px;
    background-color: #fff;
    border: 1px solid #CCCCCC;
    border-radius: 4px; 

    text-align: left;
    padding: 5px 10px;
}

.global-search .tri{
    color: transparent;
    position: absolute;
    top: -1px;
    left: -13px;

    border: 15px solid; 
    border-right-color: #fff;
    border-left: 0;
}

.search-block_preloader{
    width: 15px;
    height: 16px;
}

/** SEARCH **/

.search {

    font-size: 12px;
    background: #fff;
    padding: 10px;
    margin-bottom: 30px;
    border: solid 1px #E4E3E3;
    border-radius: 4px;
}



.search__head {

    font-size: 16px;
    text-align: left;

    display: flex;
    align-items: center;
}

.search__head-btn{
    border: none;
    border-radius: 5px;
    padding: 5px 7px;
    margin-left: 10px;
    background-color: #6A0000;
    color: white;

    transition: 1s ease-out;
}

.search__head-btn:hover{
    background-color: #AC0000;
    cursor: pointer;
}

.search__icon{

}
.search__label {
    color: #363f48;
    display: block;
    font-weight: bold;
    margin-top: 2px;
    margin-bottom: 2px;
}

.search__col {

}

.search__col_left{
    padding-right: 5px;
}

.search__col_right{
    padding-left: 5px;
}

.search__select {
    width: 100% !important;
}
.search__select .btn, .search__select li a {
    font-size: 12px;
}



.search-btn-title{
    position: relative;

}

.search-btn-icon {
    position: absolute;
    font-size: 15px;
    left: -17px;
    z-index: 1000;
}

.search-btn_favorite {
    position: relative;

}

.search-btn_favorite span {
    position: absolute;
    display: block;
    font-size: 21px;
    right: 10px;
    top: 4px;
}


.search-block .title {
    font-weight: 700;
    border-left: 4px solid #6a0000;
    padding-left: 15px;
    font-size: 18px;
    color: #6a0000;
}

.search-block .ratings li {
    list-style: none;
    padding: 6px 0px;
    font-size: 12px;
    border-bottom: 1px dotted #DDD;
}

.search-block .ratings li a {
    text-decoration: none;
}

.search-block .ratings {
    margin: 0px;
    padding: 0px;
}

.search-block .ratings li span {
    float: right;
    color: #999;
}

.slider-price-amont {
    font-size: 12px;
    color: #999;
    font-weight: 400;
}

.round {
    background: #6a0000;
}

.footable-last-visible{

}



#th-auc-sort {
    color: rgba(255,255,255,0.5);
    transition: 0.3s color ease;
}

#th-auc-sort:hover {
    color: #fff;
}



/** TABLE **/

#table .table thead th {
    text-align: center;
    vertical-align: middle;
}
.table thead .footable-last-visible {
    border-right: 1px solid #6a0000;
}


#table #main-table table tbody tr table tbody tr th {
    min-width: 190px;
}
.table-pagination{
    text-align: center;
}
#main-table .table-container .car-table {
    margin-bottom: 0;
}

.table {
    font-size: 13px;
}

.table th{
    word-wrap: break-word;
    padding: 8px 0 !important;
    text-align: center;
}

#table-body > tr > td{
    text-align: center;
}

#table-body > tr table{
    text-align: left;
}


.slider.slider-horizontal .slider-track {
    height: 10px;
    width: 100%;
    margin-top: -5px;
    top: 50%;
    left: 0;
    background: #6a0000;
    border-radius: 0px;
}

.slider.slider-horizontal .slider-selection {
    height: 100%;
    top: 0;
    bottom: 0;
    background: #f5f5f5;
}

.slider.slider-horizontal .slider-handle {
    margin-left: -10px;
    margin-top: -5px;
    border-radius: 0px;
}

.footable-header th {
    background-color: #6a0000;
    color: #fff;
    border-right: 1px solid #fff;
}

.footable-header .last-th {
    border-right: 1px solid #6a0000;
}
/**PRICE-BOX AREA START **/
.price-box label {
    display: inline-block;
    cursor: pointer;
    position: relative;
    padding-left: 0px;
    margin-right: 0px;
    font-size: 13px;
    margin-bottom: 10px;
}
.slider.slider-horizontal {
    width: 100% !important;
    height: 20px;
}
/* ... */

